# clmnr-ngn

./: .gitignore  CMakeLists.txt  conanfile.py  hits.schema
.github/workflows/: check.yml  coverage.yml
clickbench/: CMakeLists.txt  run.cpp
cmake/: compile.cmake  dependencies.cmake
example/: hits_sample.clmnr  schema.csv  simple.clmnr  simple.csv
exe/: CMakeLists.txt  columnar_to_csv.cpp  csv_to_columnar.cpp  gen.cpp
script/: bench_compare.sh  bench_duckdb.sh  build.sh  build_profile.sh  compare_bench.py  coverage.sh  format.sh  perf_clickbench.sh  perf_csv_to_columnar.sh  tidy.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  column.h  columnar.h  columnar_file.h  csv.h  csv_reader.h  datetime.h  schema.h  serde.h  type.h  value.h  zone_map.h
src/core/ut/: columnar_file_test.cpp  columnar_test.cpp  csv_reader_test.cpp  csv_test.cpp  datetime_test.cpp  schema_test.cpp
src/execution/: CMakeLists.txt  aggregation.cpp  aggregation.h  aggregation_executor.cpp  aggregation_executor.h  aggregation_executor_compact.cpp  aggregation_executor_compact.h  batch.h  expression.cpp  expression.h  int128.h  kernel.cpp  kernel.h  operator.cpp  operator.h  stream.h
src/execution/bench/: global_agg_bench.cpp  kernel_bench.cpp
src/execution/ut/: aggregation_test.cpp  batch_test.cpp  expression_test.cpp  global_agg_simd_test.cpp  global_aggregation_test.cpp  kernel_test.cpp  operator_test.cpp
src/util/: CMakeLists.txt  assert.h  macro.h
